[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/tool_selector/tool_selector.gd" type="Script" id=2]
[ext_resource path="res://arts/icons.png" type="Texture" id=3]
[ext_resource path="res://assets/tool_selector/rename_popup.tscn" type="PackedScene" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 31, 1, 7, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 38, 1, 7, 7 )

[node name="ToolSelector" type="PanelContainer"]
anchor_right = 0.19375
anchor_bottom = 0.396296
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 179.0
margin_bottom = 207.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
margin_right = 172.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBox/HBoxContainer"]
margin_top = 3.0
margin_right = 34.0
margin_bottom = 17.0
text = "Tools"

[node name="Spacer" type="Control" parent="VBox/HBoxContainer"]
margin_left = 38.0
margin_right = 124.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonScaleUp" type="TextureButton" parent="VBox/HBoxContainer"]
margin_left = 128.0
margin_right = 148.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
theme = SubResource( 1 )
texture_normal = SubResource( 2 )
expand = true

[node name="ButtonScaleDown" type="TextureButton" parent="VBox/HBoxContainer"]
margin_left = 152.0
margin_right = 172.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
theme = SubResource( 1 )
texture_normal = SubResource( 3 )
expand = true

[node name="ItemList" type="ItemList" parent="VBox"]
margin_top = 24.0
margin_right = 172.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "123", ExtResource( 1 ), false, "123", ExtResource( 1 ), false, "234", ExtResource( 1 ), false ]
allow_rmb_select = true
max_columns = 5
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 40, 40 )

[node name="PopupMenu" type="PopupMenu" parent="VBox/ItemList"]
margin_left = 27.0
margin_top = 68.0
margin_right = 147.56
margin_bottom = 138.0
items = [ "Duplicate", null, 0, false, false, 0, 0, null, "", false, "Delete", null, 0, false, false, 1, 0, null, "", false, "Rename", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenamePopup" parent="VBox/ItemList" instance=ExtResource( 4 )]

[connection signal="pressed" from="VBox/HBoxContainer/ButtonScaleUp" to="." method="_on_ButtonScaleUp_pressed"]
[connection signal="pressed" from="VBox/HBoxContainer/ButtonScaleDown" to="." method="_on_ButtonScaleDown_pressed"]
[connection signal="item_rmb_selected" from="VBox/ItemList" to="." method="_on_ItemList_item_rmb_selected"]
[connection signal="item_selected" from="VBox/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="id_pressed" from="VBox/ItemList/PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
